syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "AssetModel";

import "sitewhere-common.proto";
import "google/protobuf/timestamp.proto";

// ###################
// ### ASSET TYPES ###
// ###################

// Asset type create request.
message GAssetTypeCreateRequest {
	GOptionalString token = 1;
	string name = 2;
	string description = 3;
	string imageUrl = 4;
	GAssetCategory assetCategory = 5;
	map<string, string> metadata = 6;
}

// Asset type.
message GAssetType {
	GUUID id = 1;
	string token = 2;
	string name = 3;
	string description = 4;
	string imageUrl = 5;
	GAssetCategory assetCategory = 6;
	map<string, string> metadata = 7;
}

// Criteria for searching asset types.
message GAssetTypeSearchCriteria {
	GPaging paging = 2;
}

// Results for asset type search.
message GAssetTypeSearchResults {
	int64 count = 1;
	repeated GAssetType assetTypes = 2;
}

// ##############
// ### ASSETS ###
// ##############

// Asset create request.
message GAssetCreateRequest {
	GOptionalString token = 1;
	string assetTypeToken = 2;
	string name = 3;
	string imageUrl = 4;
	map<string, string> metadata = 5;
}

// Asset.
message GAsset {
	GUUID id = 1;
	string token = 2;
	GUUID assetTypeId = 3;
	string name = 4;
	string imageUrl = 5;
	map<string, string> metadata = 6;
}

// Criteria for searching assets.
message GAssetSearchCriteria {
	GPaging paging = 2;
	GUUID assetTypeId = 3;
}

// Results for asset search.
message GAssetSearchResults {
	int64 count = 1;
	repeated GAsset assets = 2;
}
